--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,oneside,article]{memoir}
+\documentclass[12pt,a4paper,oneside,article]{memoir}
 
 
 
@@ -27,7 +27,7 @@
 
 % PDF SETUP
 \usepackage[unicode,bookmarks, colorlinks, breaklinks,
-pdftitle={T-61.3040: Ex 4},
+pdftitle={T-61.3040: Ex 9},
 pdfauthor={Ville Väänänen},
 pdfproducer={xetex}
 ]{hyperref}
@@ -47,8 +47,6 @@ pdfproducer={xetex}
 
 \usepackage{mymath}
 \usepackage{mylayout}
-
-
 
 
 % PARAGRAPHS
@@ -91,7 +89,7 @@ pdfproducer={xetex}
 \newcommand{\coursename}{Statistical Signal Modeling}
 \newcommand{\duedate}{\today}
 \newcommand{\studentid}{63527M}
-\renewcommand{\title}{Exercise Round 5}
+\renewcommand{\title}{Exercise Round 9}
 \author{Ville Väänänen}
 
 \setsecnumdepth{subsubsection}
@@ -110,5 +108,5 @@ pdfproducer={xetex}
 
 \everymath{\displaystyle}
 \begin{document}
-	\input{ex5}
+	\input{ex9}
 \end{document}
